test/error/MainParamInt.fu
public static class Test
{
	public static void Main(
		int argc) //ERROR: 'Main' method parameter must be 'string[]'
	{
	}
}

